--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Vídeos</h2>
             <div class="video-container">
                 <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
                     <p>Educação Antirracista</p>
                 </div>
                 <div class="video">
