--- a/index.html
+++ b/index.html
@@ -13,30 +13,38 @@
 
     <main>
         <section>
-            <h2>Sobre Educação Antirracista</h2>
-            <p>A educação antirracista é um processo contínuo de aprendizado e reflexão sobre a história e a cultura dos povos negros, combatendo preconceitos e promovendo a igualdade racial. É essencial para construir uma sociedade mais justa e igualitária.</p>
+            <h2>Importância da Educação Antirracista</h2>
+            <p>A educação antirracista é fundamental para promover a igualdade e combater preconceitos. Ela nos ensina a reconhecer e respeitar a diversidade, além de preparar cidadãos mais conscientes e empáticos.</p>
         </section>
 
         <section>
-            <h2>Vídeos</h2>
-            <div class="video-container">
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
-                    <p>Educação Antirracista</p>
-                </div>
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
-                    <p>Termos Racistas</p>
-                </div>
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
-                    <p>Racismo Estrutural</p>
-                </div>
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_4" frameborder="0" allowfullscreen></iframe>
-                    <p>Cotas</p>
-                </div>
+            <h2>Vídeo Informativo</h2>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
+                <p>Este vídeo aborda a importância de compreender o racismo estrutural e suas implicações na sociedade.</p>
             </div>
+        </section>
+
+        <section>
+            <h2>Livros Recomendados</h2>
+            <ul class="book-list">
+                <li>
+                    <img src="image1.jpg" alt="Livro 1">
+                    <p><strong>Livro 1:</strong> Título do Livro sobre Antirracismo</p>
+                </li>
+                <li>
+                    <img src="image2.jpg" alt="Livro 2">
+                    <p><strong>Livro 2:</strong> Título do Livro sobre Racismo Estrutural</p>
+                </li>
+                <li>
+                    <img src="image3.jpg" alt="Livro 3">
+                    <p><strong>Livro 3:</strong> Título do Livro sobre História dos Negros no Brasil</p>
+                </li>
+                <li>
+                    <img src="image4.jpg" alt="Livro 4">
+                    <p><strong>Livro 4:</strong> Outro Título Importante</p>
+                </li>
+            </ul>
         </section>
     </main>
 
