--- a/index.html
+++ b/index.html
@@ -26,23 +26,37 @@
         </section>
 
         <section>
+            <h2>Recomendações de Vídeos</h2>
+            <div class="video-container">
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
+                    <p>Este documentário explora a história do racismo no Brasil, destacando eventos significativos e suas consequências.</p>
+                </div>
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
+                    <p>Especialistas discutem o conceito de racismo estrutural e oferecem insights sobre como combatê-lo.</p>
+                </div>
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
+                    <p>Relatos de pessoas negras sobre suas experiências diárias no Brasil contemporâneo.</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
             <h2>Livros Recomendados</h2>
             <ul class="book-list">
                 <li>
-                    <img src="image1.jpg" alt="Livro 1">
-                    <p><strong>Livro 1:</strong> Título do Livro sobre Antirracismo</p>
+                    <img src="image1.jpg" alt="Pequeno Manual Antirracista">
+                    <p><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</p>
                 </li>
                 <li>
-                    <img src="image2.jpg" alt="Livro 2">
-                    <p><strong>Livro 2:</strong> Título do Livro sobre Racismo Estrutural</p>
+                    <img src="image2.jpg" alt="Tornar-se Negro">
+                    <p><strong>Tornar-se Negro</strong> - Neusa Santos Souza</p>
                 </li>
                 <li>
-                    <img src="image3.jpg" alt="Livro 3">
-                    <p><strong>Livro 3:</strong> Título do Livro sobre História dos Negros no Brasil</p>
-                </li>
-                <li>
-                    <img src="image4.jpg" alt="Livro 4">
-                    <p><strong>Livro 4:</strong> Outro Título Importante</p>
+                    <img src="image3.jpg" alt="Quarto de Despejo">
+                    <p><strong>Quarto de Despejo: Diário de uma Favelada</strong> - Carolina Maria de Jesus</p>
                 </li>
             </ul>
         </section>
