--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
             <h2>Livros Recomendados</h2>
             <ul class="book-list">
                 <li>
-                    <img src="image1.jpg" alt="Pequeno Manual Antirracista">
+                    <img src="caminho/para/image1.jpg" alt="Pequeno Manual Antirracista">
                     <p><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</p>
                 </li>
                 <li>
-                    <img src="image2.jpg" alt="Tornar-se Negro">
+                    <img src="caminho/para/image2.jpg" alt="Tornar-se Negro">
                     <p><strong>Tornar-se Negro</strong> - Neusa Santos Souza</p>
                 </li>
                 <li>
-                    <img src="image3.jpg" alt="Quarto de Despejo">
+                    <img src="caminho/para/image3.jpg" alt="Quarto de Despejo">
                     <p><strong>Quarto de Despejo: Diário de uma Favelada</strong> - Carolina Maria de Jesus</p>
                 </li>
             </ul>
