--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,62 +8,42 @@
 </head>
 <body>
     <header>
-        <h1>Educação Antirracista</h1>
+        <h1>Educação Antirracista: Construindo um Futuro Igualitário</h1>
     </header>
 
-    <main>
-        <section>
-            <h2>Importância da Educação Antirracista</h2>
-            <p>A educação antirracista é fundamental para promover a igualdade e combater preconceitos. Ela nos ensina a reconhecer e respeitar a diversidade, além de preparar cidadãos mais conscientes e empáticos.</p>
-        </section>
+    <section class="importance">
+        <h2>A Importância da Educação Antirracista</h2>
+        <p>A educação antirracista é essencial para a construção de uma sociedade mais justa e igualitária. Ela promove a conscientização sobre as desigualdades históricas e contemporâneas enfrentadas por grupos racializados e capacita indivíduos a reconhecer e desafiar o racismo em suas diversas formas. Ao integrar o antirracismo no currículo escolar e na formação de educadores, podemos cultivar empatia, respeito e solidariedade, preparando as futuras gerações para criar um mundo onde todos tenham as mesmas oportunidades e direitos. A educação antirracista não é apenas sobre aprender sobre o racismo, mas sobre agir ativamente para combatê-lo e garantir a equidade para todos.</p>
+    </section>
 
-        <section>
-            <h2>Vídeo Informativo</h2>
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
-                <p>Este vídeo aborda a importância de compreender o racismo estrutural e suas implicações na sociedade.</p>
-            </div>
-        </section>
+    <section class="video">
+        <h2>Assista ao Vídeo</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p><strong>Resumo do Vídeo:</strong> O vídeo aborda a importância da educação antirracista no contexto brasileiro, destacando como o racismo se manifesta nas instituições educacionais e na sociedade em geral. Ele apresenta entrevistas com especialistas e educadores que discutem estratégias para integrar a educação antirracista no currículo escolar, promovendo um ambiente inclusivo e respeitador. Além disso, o vídeo explora a relação entre racismo estrutural e as disparidades educacionais, oferecendo sugestões práticas para docentes e gestores escolares para enfrentar essas questões.</p>
+    </section>
 
-        <section>
-            <h2>Recomendações de Vídeos</h2>
-            <div class="video-container">
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
-                    <p>Este documentário explora a história do racismo no Brasil, destacando eventos significativos e suas consequências.</p>
-                </div>
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
-                    <p>Especialistas discutem o conceito de racismo estrutural e oferecem insights sobre como combatê-lo.</p>
-                </div>
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
-                    <p>Relatos de pessoas negras sobre suas experiências diárias no Brasil contemporâneo.</p>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <h2>Livros Recomendados</h2>
-            <ul class="book-list">
-                <li>
-                    <img src="caminho/para/image1.jpg" alt="Pequeno Manual Antirracista">
-                    <p><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</p>
-                </li>
-                <li>
-                    <img src="caminho/para/image2.jpg" alt="Tornar-se Negro">
-                    <p><strong>Tornar-se Negro</strong> - Neusa Santos Souza</p>
-                </li>
-                <li>
-                    <img src="caminho/para/image3.jpg" alt="Quarto de Despejo">
-                    <p><strong>Quarto de Despejo: Diário de uma Favelada</strong> - Carolina Maria de Jesus</p>
-                </li>
-            </ul>
-        </section>
-    </main>
+    <section class="books">
+        <h2>Livros Recomendados</h2>
+        <div class="book">
+            <img src="https://m.media-amazon.com/images/I/81rI5D2gOvL._AC_UL640_QL65_.jpg" alt="Pequeno Manual Antirracista - Djamila Ribeiro">
+            <p><strong>Pequeno Manual Antirracista - Djamila Ribeiro</strong></p>
+        </div>
+        <div class="book">
+            <img src="https://m.media-amazon.com/images/I/81KiEr5uWPL._AC_UL640_QL65_.jpg" alt="Tornar-se Negro - Neusa Santos Souza">
+            <p><strong>Tornar-se Negro - Neusa Santos Souza</strong></p>
+        </div>
+        <div class="book">
+            <img src="https://m.media-amazon.com/images/I/81oM2Wz4KEL._AC_UL640_QL65_.jpg" alt="Quarto de Despejo - Carolina Maria de Jesus">
+            <p><strong>Quarto de Despejo: Diário de uma Favelada - Carolina Maria de Jesus</strong></p>
+        </div>
+        <div class="book">
+            <img src="https://m.media-amazon.com/images/I/81U8akK2D1L._AC_UL640_QL65_.jpg" alt="O Que É Racismo Estrutural - Silvio Almeida">
+            <p><strong>O Que É Racismo Estrutural - Silvio Almeida</strong></p>
+        </div>
+    </section>
 
     <footer>
-        <p>Site criado pela 2ª série A da Escola Estadual Pedro Paulo Gonçalves Lopes</p>
+        <p>&copy; 2024 Educação Antirracista. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
