--- a/index.html
+++ b/index.html
@@ -8,42 +8,32 @@
 </head>
 <body>
     <header>
-        <h1>Educação Antirracista: Construindo um Futuro Igualitário</h1>
+        <h1>A Importância da Educação Antirracista</h1>
+        <p>A educação antirracista é fundamental para promover a igualdade e a justiça social. Ela ajuda a desconstruir preconceitos, valoriza a diversidade cultural e forma cidadãos críticos que atuam contra a discriminação racial.</p>
     </header>
 
-    <section class="importance">
-        <h2>A Importância da Educação Antirracista</h2>
-        <p>A educação antirracista é essencial para a construção de uma sociedade mais justa e igualitária. Ela promove a conscientização sobre as desigualdades históricas e contemporâneas enfrentadas por grupos racializados e capacita indivíduos a reconhecer e desafiar o racismo em suas diversas formas. Ao integrar o antirracismo no currículo escolar e na formação de educadores, podemos cultivar empatia, respeito e solidariedade, preparando as futuras gerações para criar um mundo onde todos tenham as mesmas oportunidades e direitos. A educação antirracista não é apenas sobre aprender sobre o racismo, mas sobre agir ativamente para combatê-lo e garantir a equidade para todos.</p>
-    </section>
-
-    <section class="video">
-        <h2>Assista ao Vídeo</h2>
+    <section class="video-main">
+        <h2>Vídeo Principal</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p><strong>Resumo do Vídeo:</strong> O vídeo aborda a importância da educação antirracista no contexto brasileiro, destacando como o racismo se manifesta nas instituições educacionais e na sociedade em geral. Ele apresenta entrevistas com especialistas e educadores que discutem estratégias para integrar a educação antirracista no currículo escolar, promovendo um ambiente inclusivo e respeitador. Além disso, o vídeo explora a relação entre racismo estrutural e as disparidades educacionais, oferecendo sugestões práticas para docentes e gestores escolares para enfrentar essas questões.</p>
+        <p><strong>Resumo do Vídeo:</strong> Este vídeo discute a importância da educação antirracista no contexto brasileiro, mostrando como o racismo se manifesta nas instituições educacionais e propondo formas de combatê-lo.</p>
     </section>
 
-    <section class="books">
-        <h2>Livros Recomendados</h2>
-        <div class="book">
-            <img src="https://m.media-amazon.com/images/I/81rI5D2gOvL._AC_UL640_QL65_.jpg" alt="Pequeno Manual Antirracista - Djamila Ribeiro">
-            <p><strong>Pequeno Manual Antirracista - Djamila Ribeiro</strong></p>
+    <section class="videos-container">
+        <h2>Vídeos Recomendados</h2>
+        <div class="video">
+            <iframe src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="book">
-            <img src="https://m.media-amazon.com/images/I/81KiEr5uWPL._AC_UL640_QL65_.jpg" alt="Tornar-se Negro - Neusa Santos Souza">
-            <p><strong>Tornar-se Negro - Neusa Santos Souza</strong></p>
+        <div class="video">
+            <iframe src="https://www.youtube.com/embed/Ia3NrSoTSXk" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="book">
-            <img src="https://m.media-amazon.com/images/I/81oM2Wz4KEL._AC_UL640_QL65_.jpg" alt="Quarto de Despejo - Carolina Maria de Jesus">
-            <p><strong>Quarto de Despejo: Diário de uma Favelada - Carolina Maria de Jesus</strong></p>
-        </div>
-        <div class="book">
-            <img src="https://m.media-amazon.com/images/I/81U8akK2D1L._AC_UL640_QL65_.jpg" alt="O Que É Racismo Estrutural - Silvio Almeida">
-            <p><strong>O Que É Racismo Estrutural - Silvio Almeida</strong></p>
+        <div class="video">
+            <iframe src="https://www.youtube.com/embed/E_BjYPOE3ag" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2024 Educação Antirracista. Todos os direitos reservados.</p>
-    </footer>
-</body>
-</html>
+    <section class="conquests">
+        <h2>Conquistas dos Negros no Brasil</h2>
+        <p>Os negros no Brasil têm uma rica história de lutas e conquistas. Desde a abolição da escravatura em 1888, que foi um marco importante, eles têm lutado por direitos iguais e reconhecimento social. O movimento negro tem conquistado espaço em diversas áreas, incluindo política, cultura e educação. A presença de líderes negros em posições de destaque e o reconhecimento da importância da cultura afro-brasileira nas escolas são algumas das vitórias. Além disso, a criação de políticas de cotas e ações afirmativas visam reduzir as desigualdades raciais e promover uma sociedade mais justa. Essas conquistas são resultado de um esforço coletivo e contínuo, que busca a valorização da identidade negra e a construção de um futuro mais equitativo.</p>
+    </section>
+
+    <se
