--- a/index.html
+++ b/index.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educação Antirracista</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>A Importância da Educação Antirracista</h1>
-        <p>A educação antirracista é fundamental para promover a igualdade e a justiça social. Ela ajuda a desconstruir preconceitos, valoriza a diversidade cultural e forma cidadãos críticos que atuam contra a discriminação racial.</p>
+        <h1>Educação Antirracista</h1>
+        <p>A educação antirracista é crucial para promover a igualdade e combater preconceitos. Ela nos ensina a reconhecer e respeitar a diversidade, além de preparar cidadãos mais conscientes e empáticos.</p>
     </header>
 
-    <section class="video-main">
-        <h2>Vídeo Principal</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p><strong>Resumo do Vídeo:</strong> Este vídeo discute a importância da educação antirracista no contexto brasileiro, mostrando como o racismo se manifesta nas instituições educacionais e propondo formas de combatê-lo.</p>
-    </section>
+    <main>
+        <section>
+            <h2>Vídeo Informativo</h2>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
+                <p>Este vídeo aborda a importância de compreender o racismo estrutural e suas implicações na sociedade.</p>
+            </div>
+        </section>
 
-    <section class="videos-container">
-        <h2>Vídeos Recomendados</h2>
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/Ia3NrSoTSXk" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/E_BjYPOE3ag" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </section>
+        <section>
+            <h2>Vídeos Recomendados</h2>
+            <div class="video-container">
+                <div class="video">
+                    <iframe width="320" height="180" src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="video">
+                    <iframe width="320" height="180" src="https://www.youtube.com/embed/Ia3NrSoTSXk" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="video">
+                    <iframe width="320" height="180" src="https://www.youtube.com/embed/E_BjYPOE3ag" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
 
-    <section class="conquests">
-        <h2>Conquistas dos Negros no Brasil</h2>
-        <p>Os negros no Brasil têm uma rica história de lutas e conquistas. Desde a abolição da escravatura em 1888, que foi um marco importante, eles têm lutado por direitos iguais e reconhecimento social. O movimento negro tem conquistado espaço em diversas áreas, incluindo política, cultura e educação. A presença de líderes negros em posições de destaque e o reconhecimento da importância da cultura afro-brasileira nas escolas são algumas das vitórias. Além disso, a criação de políticas de cotas e ações afirmativas visam reduzir as desigualdades raciais e promover uma sociedade mais justa. Essas conquistas são resultado de um esforço coletivo e contínuo, que busca a valorização da identidade negra e a construção de um futuro mais equitativo.</p>
-    </section>
+        <section>
+            <h2>Conquistas dos Pretos</h2>
+            <p>Os negros têm conquistado inúmeras vitórias ao longo dos anos, desde o reconhecimento de direitos civis até a ocupação de espaços importantes na sociedade. Destacam-se na música, nas artes, na política e nos esportes, quebrando barreiras e desafiando estereótipos. Movimentos sociais têm sido fundamentais para garantir igualdade e justiça, promovendo mudanças significativas nas leis e nas mentalidades. O empoderamento das comunidades negras continua a crescer, inspirando futuras gerações a lutar por seus direitos e a celebrar sua identidade e cultura. A luta por justiça e igualdade ainda continua, mas as conquistas até aqui são um testemunho da resiliência e do espírito indomável do povo negro.</p>
+        </section>
 
-    <se
+        <section>
+            <h2>Livros Recomendados</h2>
+            <ul class="book-list">
+                <li>
+                    <img src="https://m.media-amazon.com/images/I/41R2aZ2F3PL._SX346_BO1,204,203,200_.jpg" alt="Pequeno Manual Antirracista">
+                    <p><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</p>
+                    <p>Um guia essencial para entender e combater o racismo em suas várias formas.</p>
+                </li>
+                <li>
+                    <img src="https://m.media-amazon.com/images/I/41j3oO2DSJL._SX331_BO1,204,203,200_.jpg" alt="Tornar-se Negro">
+                    <p><strong>Tornar-se Negro</strong> - Neusa Santos Souza</p>
+                    <p>Uma reflexão profunda sobre a identidade negra e os desafios enfrentados no Brasil.</p>
+                </li>
+                <li>
+                    <img src="https://m.media-amazon.com/images/I/51Nq3nqG9hL._SX346_BO1,204,203,200_.jpg" alt="Quarto de Despejo">
+                    <p><strong>Quarto de Despejo: Diário de uma Favelada</strong> - Carolina Maria de Jesus</p>
+                    <p>Um relato poderoso sobre a vida na favela, escrito de forma autêntica e impactante.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>Site criado pelos alunos da 2ª série A da E.E Pedro Paulo Gonçalves Lopes Professor.</p>
+    </footer>
+</body>
+</html>
