--- a/index.html
+++ b/index.html
@@ -4,67 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educação Antirracista</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Educação Antirracista</h1>
-        <p>A educação antirracista é crucial para promover a igualdade e combater preconceitos. Ela nos ensina a reconhecer e respeitar a diversidade, além de preparar cidadãos mais conscientes e empáticos.</p>
     </header>
-
     <main>
-        <section>
-            <h2>Vídeo Informativo</h2>
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
-                <p>Este vídeo aborda a importância de compreender o racismo estrutural e suas implicações na sociedade.</p>
-            </div>
+        <section id="sobre">
+            <h2>Sobre o Tema</h2>
+            <p>A educação antirracista busca promover a igualdade racial e combater o racismo por meio da conscientização e do conhecimento. É um esforço contínuo para desconstruir preconceitos e construir uma sociedade mais justa.</p>
         </section>
 
-        <section>
+        <section id="videos">
             <h2>Vídeos Recomendados</h2>
-            <div class="video-container">
-                <div class="video">
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="video">
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/Ia3NrSoTSXk" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <div class="video">
-                    <iframe width="320" height="180" src="https://www.youtube.com/embed/E_BjYPOE3ag" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <h2>Conquistas dos Pretos</h2>
-            <p>Os negros têm conquistado inúmeras vitórias ao longo dos anos, desde o reconhecimento de direitos civis até a ocupação de espaços importantes na sociedade. Destacam-se na música, nas artes, na política e nos esportes, quebrando barreiras e desafiando estereótipos. Movimentos sociais têm sido fundamentais para garantir igualdade e justiça, promovendo mudanças significativas nas leis e nas mentalidades. O empoderamento das comunidades negras continua a crescer, inspirando futuras gerações a lutar por seus direitos e a celebrar sua identidade e cultura. A luta por justiça e igualdade ainda continua, mas as conquistas até aqui são um testemunho da resiliência e do espírito indomável do povo negro.</p>
-        </section>
-
-        <section>
-            <h2>Livros Recomendados</h2>
-            <ul class="book-list">
-                <li>
-                    <img src="https://m.media-amazon.com/images/I/41R2aZ2F3PL._SX346_BO1,204,203,200_.jpg" alt="Pequeno Manual Antirracista">
-                    <p><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</p>
-                    <p>Um guia essencial para entender e combater o racismo em suas várias formas.</p>
-                </li>
-                <li>
-                    <img src="https://m.media-amazon.com/images/I/41j3oO2DSJL._SX331_BO1,204,203,200_.jpg" alt="Tornar-se Negro">
-                    <p><strong>Tornar-se Negro</strong> - Neusa Santos Souza</p>
-                    <p>Uma reflexão profunda sobre a identidade negra e os desafios enfrentados no Brasil.</p>
-                </li>
-                <li>
-                    <img src="https://m.media-amazon.com/images/I/51Nq3nqG9hL._SX346_BO1,204,203,200_.jpg" alt="Quarto de Despejo">
-                    <p><strong>Quarto de Despejo: Diário de uma Favelada</strong> - Carolina Maria de Jesus</p>
-                    <p>Um relato poderoso sobre a vida na favela, escrito de forma autêntica e impactante.</p>
-                </li>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=abc123" target="_blank">Vídeo 1: Introdução à Educação Antirracista</a></li>
+                <li><a href="https://www.youtube.com/watch?v=def456" target="_blank">Vídeo 2: O Impacto do Racismo Estrutural</a></li>
+                <li><a href="https://www.youtube.com/watch?v=ghi789" target="_blank">Vídeo 3: Histórias de Resistência</a></li>
+                <li><a href="https://www.youtube.com/watch?v=jkl012" target="_blank">Vídeo 4: Como Ser um Aliado Antirracista</a></li>
             </ul>
         </section>
-    </main>
 
+        <section id="livros">
+            <h2>Livros Recomendados</h2>
+            <ul>
+                <li><em>Pequeno Manual Antirracista</em> - Djamila Ribeiro</li>
+                <li><em>O Genocídio do Negro Brasileiro</em> - Abdias do Nascimento</li>
+                <li><em>Quarto de Despejo</em> - Carolina Maria de Jesus</li>
+                <li><em>Racismo Estrutural</em> - Silvio Almeida</li>
+            </ul>
+        </section>
+
+        <section id="termos">
+            <h2>Termos Racistas a Evitar</h2>
+            <ul>
+                <li>"Cabelo ruim"</li>
+                <li>"Criado-mudo"</li>
+                <li>"Denegrir"</li>
+                <li>"Mulato"</li>
+            </ul>
+            <p>Esses termos têm conotações racistas e devem ser substituídos por alternativas respeitosas e inclusivas.</p>
+        </section>
+    </main>
     <footer>
-        <p>Site criado pelos alunos da 2ª série A da E.E Pedro Paulo Gonçalves Lopes Professor.</p>
+        <p>© 2024 Educação Antirracista</p>
     </footer>
 </body>
 </html>
