--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
 <body>
     <header>
         <h1>Educação Antirracista</h1>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#videos">Vídeos</a></li>
+                <li><a href="#livros">Livros</a></li>
+                <li><a href="#termos">Termos a Evitar</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="sobre">
             <h2>Sobre o Tema</h2>
-            <p>A educação antirracista busca promover a igualdade racial e combater o racismo por meio da conscientização e do conhecimento. É um esforço contínuo para desconstruir preconceitos e construir uma sociedade mais justa.</p>
+            <p>A educação antirracista promove igualdade e combate o racismo por meio da conscientização. É essencial para construir uma sociedade mais justa.</p>
         </section>
 
         <section id="videos">
             <h2>Vídeos Recomendados</h2>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=abc123" target="_blank">Vídeo 1: Introdução à Educação Antirracista</a></li>
-                <li><a href="https://www.youtube.com/watch?v=def456" target="_blank">Vídeo 2: O Impacto do Racismo Estrutural</a></li>
-                <li><a href="https://www.youtube.com/watch?v=ghi789" target="_blank">Vídeo 3: Histórias de Resistência</a></li>
-                <li><a href="https://www.youtube.com/watch?v=jkl012" target="_blank">Vídeo 4: Como Ser um Aliado Antirracista</a></li>
-            </ul>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/abc123" title="Introdução à Educação Antirracista" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/def456" title="O Impacto do Racismo Estrutural" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/ghi789" title="Histórias de Resistência" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/jkl012" title="Como Ser um Aliado Antirracista" allowfullscreen></iframe>
+            </div>
         </section>
 
         <section id="livros">
