--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#videos">Vídeos</a></li>
                 <li><a href="#livros">Livros</a></li>
                 <li><a href="#termos">Termos a Evitar</a></li>
+                <li><a href="#cotas">História das Cotas</a></li>
             </ul>
         </nav>
     </header>
@@ -27,10 +28,10 @@
         <section id="videos">
             <h2>Vídeos Recomendados</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/abc123" title="Introdução à Educação Antirracista" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/def456" title="O Impacto do Racismo Estrutural" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/ghi789" title="Histórias de Resistência" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/jkl012" title="Como Ser um Aliado Antirracista" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/V1eYniJ0Rnk" title="Introdução à Educação Antirracista" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/3KJMpH8cJSk" title="O Impacto do Racismo Estrutural" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/y7g6z9AFZ6c" title="Histórias de Resistência" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Bu0Jco5G5s4" title="Como Ser um Aliado Antirracista" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -47,12 +48,20 @@
         <section id="termos">
             <h2>Termos Racistas a Evitar</h2>
             <ul>
-                <li>"Cabelo ruim"</li>
-                <li>"Criado-mudo"</li>
-                <li>"Denegrir"</li>
-                <li>"Mulato"</li>
+                <li>"Cabelo ruim" - Use "cabelo crespo" ou "cabelo afro"</li>
+                <li>"Criado-mudo" - Use "mesa de cabeceira"</li>
+                <li>"Denegrir" - Use "difamar" ou "prejudicar"</li>
+                <li>"Mulato" - Use "pardo"</li>
+                <li>"Escravo" - Use "pessoa escravizada"</li>
+                <li>"Moreno" - Use "negro" ou "afrodescendente" quando apropriado</li>
             </ul>
             <p>Esses termos têm conotações racistas e devem ser substituídos por alternativas respeitosas e inclusivas.</p>
+        </section>
+
+        <section id="cotas">
+            <h2>História das Cotas</h2>
+            <p>As políticas de cotas foram implementadas para corrigir desigualdades históricas e estruturais. Elas visam garantir acesso igualitário a oportunidades educacionais e de trabalho para grupos marginalizados.</p>
+            <p>Ainda são necessárias porque o racismo estrutural continua a afetar a vida de muitas pessoas. As cotas buscam criar um campo de atuação mais justo e igualitário.</p>
         </section>
     </main>
     <footer>
