--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <section id="videos">
             <h2>Vídeos Recomendados</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/V1eYniJ0Rnk" title="Introdução à Educação Antirracista" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/3KJMpH8cJSk" title="O Impacto do Racismo Estrutural" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/y7g6z9AFZ6c" title="Histórias de Resistência" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/Bu0Jco5G5s4" title="Como Ser um Aliado Antirracista" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/7yYbV6N4p9I" title="Educação Antirracista na Prática" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/OY6ZC1aM8hQ" title="O Que É Racismo Estrutural?" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/c6a7v0pX2s4" title="Desconstruindo Preconceitos" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/KA1eB2L6Ym4" title="Cotas e Igualdade" allowfullscreen></iframe>
             </div>
         </section>
 
